# philips-airpurifier-coap

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements_test.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  hacs.yml  hassfest.yaml  stale.yml  tests.yml  update-manifest.yml
custom_components/philips_airpurifier_coap/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  fan.py  humidifier.py  icons.json  light.py  manifest.json  model.py  number.py  philips.py  select.py  sensor.py  strings.json  switch.py  timer.py
custom_components/philips_airpurifier_coap/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_smoke.py
